--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             id="floating_email1"
             class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
             placeholder=" "
-            required
+            required autocomplete="off"
           />
           <label
             for="floating_email"
@@ -62,6 +62,9 @@
               d="M482.3 192c34.2 0 93.7 29 93.7 64c0 36-59.5 64-93.7 64l-116.6 0L265.2 495.9c-5.7 10-16.3 16.1-27.8 16.1l-56.2 0c-10.6 0-18.3-10.2-15.4-20.4l49-171.6L112 320 68.8 377.6c-3 4-7.8 6.4-12.8 6.4l-42 0c-7.8 0-14-6.3-14-14c0-1.3 .2-2.6 .5-3.9L32 256 .5 145.9c-.4-1.3-.5-2.6-.5-3.9c0-7.8 6.3-14 14-14l42 0c5 0 9.8 2.4 12.8 6.4L112 192l102.9 0-49-171.6C162.9 10.2 170.6 0 181.2 0l56.2 0c11.5 0 22.1 6.2 27.8 16.1L365.7 192l116.6 0z"
             />
           </svg>
+          <div id="result_div" class="h-[100px] overflow-y-auto">
+ 
+          </div>
         </div>
         <!-- input 2 -->
         <div class="relative z-0 mb-5 group w-2/5">
@@ -88,6 +91,9 @@
               d="M482.3 192c34.2 0 93.7 29 93.7 64c0 36-59.5 64-93.7 64l-116.6 0L265.2 495.9c-5.7 10-16.3 16.1-27.8 16.1l-56.2 0c-10.6 0-18.3-10.2-15.4-20.4l49-171.6L112 320 68.8 377.6c-3 4-7.8 6.4-12.8 6.4l-42 0c-7.8 0-14-6.3-14-14c0-1.3 .2-2.6 .5-3.9L32 256 .5 145.9c-.4-1.3-.5-2.6-.5-3.9c0-7.8 6.3-14 14-14l42 0c5 0 9.8 2.4 12.8 6.4L112 192l102.9 0-49-171.6C162.9 10.2 170.6 0 181.2 0l56.2 0c11.5 0 22.1 6.2 27.8 16.1L365.7 192l116.6 0z"
             />
           </svg>
+          <div id="result_div2" class="h-[100px] overflow-y-auto">
+ 
+          </div>
         </div>
         <!-- dateinput -->
         <div class="relative h-10 min-w-[200px]">
@@ -791,7 +797,7 @@
 <button class="bg-green-700" onclick="showTickets()" ><i class="fa-solid fa-cart-shopping"></i>Buy Tickets</button>
 </div>
     </section>
-    <section id="Tickets" class="h-[100dvh] relative w-[100dvw] hidden grid-cols-[repeat(auto-fit,minmax(340px,1fr))] ">
+    <section id="Tickets" class="h-[100dvh] mt-[20px] relative w-[100dvw] hidden grid-cols-[repeat(auto-fit,minmax(340px,1fr))] ">
         
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode/1.4.4/qrcode.js" integrity="sha512-oxrVyBhqnzQ0BzuM0A/6dEIk0alz0p4SpDRaWvtuUoarIc8rnL5lVniHG5Dp21MRFojcQcmKHjaskNXhSaUPPw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
